--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -25,7 +25,7 @@
 
         Use at your own risk! ...after all, this is my first plugin.
     </description>
-    <version>0.2 (alpha)</version>
+    <version>0.3 (alpha)</version>
     <vendor>Ed Venaglia</vendor>
     <idea-version since-build="95.66"/>
 
@@ -48,9 +48,10 @@
         <fileTypeFactory implementation="net.venaglia.nondairy.soylang.SoyFileTypeFactory"/>
         <syntaxHighlighter key="soy" implementationClass="net.venaglia.nondairy.soylang.SoySyntaxHighlighter"/>
         <colorSettingsPage implementation="net.venaglia.nondairy.soylang.SoyColorsAndFontsPage"/>
-        <!--<lang.foldingBuilder language="ClosureTemplate" implementationClass="net.venaglia.nondairy.soylang.SoyFoldingBuilder"/>-->
+        <lang.foldingBuilder language="ClosureTemplate" implementationClass="net.venaglia.nondairy.soylang.SoyFoldingBuilder"/>
         <lang.braceMatcher language="ClosureTemplate" implementationClass="net.venaglia.nondairy.soylang.SoyBraceMatcher"/>
         <lang.parserDefinition language="ClosureTemplate" implementationClass="net.venaglia.nondairy.soylang.SoyParserDefinition"/>
         <lang.commenter language="ClosureTemplate" implementationClass="net.venaglia.nondairy.soylang.SoyCommenter"/>
+        <lang.psiStructureViewFactory language="ClosureTemplate" implementationClass="net.venaglia.nondairy.soylang.SoyStructureViewFactory"/>
     </extensions>
 </idea-plugin>
