--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -27,9 +27,9 @@
         my available free time.</p>
         ]]>
     </description>
-    <version>0.5.1 (beta)</version>
+    <version>0.5.1 (beta) (alpha ic)</version>
     <vendor>Ed Venaglia</vendor>
-    <idea-version since-build="111.1"/>
+    <idea-version since-build="131.0"/>
 
     <application-components>
         <component>
