--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ intellij {
     pluginName 'Non-Dairy-Soy-Plugin'
 
     version '2016.3.2'
-    downloadSources Boolean.valueOf(false)
+    downloadSources Boolean.valueOf(true)
     updateSinceUntilBuild = false
 
     sandboxDirectory project.rootDir.canonicalPath + "/.sandbox"
